fix: welcome image on tablet

--- a/src/components/welcome/WelcomeSection.module.scss
+++ b/src/components/welcome/WelcomeSection.module.scss
@@ -38,7 +38,7 @@
 
   @media (max-width: 420px) {
     margin: 0 auto 72px auto;
-    background-size: auto 50%;
+    background-size: auto 40%;
     padding-top: 14.35rem;
   }
 }
